src/app/components/gallery/gallery.component.css
.slideshow-container {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 100%;
  z-index: 1;
  /*transition: left 0.5s ease-out;*/
  background: rgba(48, 48, 48, 0.97);
}

.gallery{
  background: #303030;
}

.gallery md-grid-tile{
    cursor: pointer;
}

.active {
  z-index: 5;
  left: 0;
}

.hide {
  display: none;
}


.slideshow{
    justify-content: space-between;
    height: 100%;
    width: 100%;
    flex-wrap: nowrap;
}

.btn md-icon{
    color: snow;
}

.btn > button:disabled md-icon{
    color: grey;
}

.btn.close{
    position: absolute;
    top: 1rem;
    right: 1rem;
    z-index: 6;
}


.slide-btn {
  align-items: center;
}

.slide-btn.back{
  width: 3rem;;
}

.slide-btn.next{
  width: 3rem;
  justify-content: flex-end;
}

.slide {
  height: calc(100% - 3rem);
  width: calc(100% - 6rem);
  margin: 1.5rem 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.img {
  max-height: 100%;
  max-width: 100%;
}

